Added calculation of f1 score and ROC AUC score for text-classifier

--- a/text_classification.ipynb
+++ b/text_classification.ipynb
@@ -11,6 +11,7 @@
     "import numpy as np\n",
     "\n",
     "from transformers import pipeline\n",
+    "from sklearn.metrics import f1_score, roc_auc_score\n",
     "\n",
     "from tqdm import tqdm"
    ]
@@ -248,6 +249,27 @@
    "source": [
     "\n",
     "predictions_df[\"correct_predictions\"].sum() / len(predictions_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e001cb60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Map string labels to binary for scoring\n",
+    "predictions_df['actual_binary'] = predictions_df['actual_categories'].apply(lambda x: 1 if x == 'Fiction' else 0)\n",
+    "predictions_df['predicted_binary'] = predictions_df['predicted_categories'].apply(lambda x: 1 if x == 'Fiction' else 0)\n",
+    "\n",
+    "# Calculate F1 score\n",
+    "f1 = f1_score(predictions_df['actual_binary'], predictions_df['predicted_binary'])\n",
+    "print(f\"F1 Score: {f1}\")\n",
+    "\n",
+    "# Calculate AUC score\n",
+    "auc = roc_auc_score(predictions_df['actual_binary'], predictions_df['predicted_binary'])\n",
+    "print(f\"AUC Score: {auc}\")\n"
    ]
   },
   {
